fixes alignment on mobile view

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -174,15 +174,12 @@ body, p {
 .dots {
   display: flex;
   display: -webkit-flex;
-  margin: auto;
+  margin: auto 0px auto 8px;
 }
 
 .stepsNum {
-  margin: 5px;
-  img {
-    max-width: 30px;
+    height: 30px;
   }
-}
 
 .graphicBike {
   img {
